// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tab Navigator Render ReviewItemsNavigator 1`] = `
<BottomTabNavigator
  screenOptions={[Function]}
>
  <Screen
    component={
      Object {
        "$$typeof": Symbol(react.memo),
        "WrappedComponent": [Function],
        "compare": null,
        "type": [Function],
      }
    }
    name="[missing \\"en.HOME.HOME\\" translation]"
  />
  <Screen
    component={[Function]}
    name="[missing \\"en.WORKLIST.WORKLIST\\" translation]"
  />
</BottomTabNavigator>
`;

exports[`Tab Navigator Render ReviewItemsNavigator with user features 1`] = `
<BottomTabNavigator
  screenOptions={[Function]}
>
  <Screen
    component={
      Object {
        "$$typeof": Symbol(react.memo),
        "WrappedComponent": [Function],
        "compare": null,
        "type": [Function],
      }
    }
    name="[missing \\"en.HOME.HOME\\" translation]"
  />
  <Screen
    component={[Function]}
    name="[missing \\"en.WORKLIST.WORKLIST\\" translation]"
  />
  <Screen
    component={[Function]}
    name="[missing \\"en.GENERICS.TOOLS\\" translation]"
  />
  <Screen
    component={[Function]}
    listeners={
      Object {
        "blur": [Function],
      }
    }
    name="[missing \\"en.APPROVAL.APPROVALS\\" translation]"
  />
</BottomTabNavigator>
`;
